--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 header {
   background-color: white;
+  padding: 10px 0;
 }
 header img {
   max-height: 80px;
@@ -64,6 +65,10 @@ header nav ul li:hover:before, header nav ul li:hover:after {
   font-size: 36px;
   margin: 15px;
   color: #f29c7b;
+}
+.homepage-section .homepage-title i {
+  color: #950b1b;
+  padding-left: 10px;
 }
 .homepage-section .homepage-left-text {
   background-color: white;
@@ -279,7 +284,7 @@ header nav ul li:hover:before, header nav ul li:hover:after {
   scroll-snap-align: start;
   flex-shrink: 0;
   width: 300px;
-  height: 300px;
+  height: 225px;
   margin-right: 20px;
   margin-bottom: 15px;
   box-shadow: 5px 5px 10px #424242;
@@ -295,6 +300,11 @@ header nav ul li:hover:before, header nav ul li:hover:after {
 }
 .slides > div img:hover {
   transform: scale(1.5);
+}
+
+.slide-info {
+  color: #1e1e1e;
+  text-align: center;
 }
 
 /*# sourceMappingURL=App.css.map */
