--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 }
 header {
   background-color: white;
+  padding: 10px 0;
   img {
     max-height: 80px;
   }
@@ -76,6 +77,10 @@ header {
     font-size: 36px;
     margin: 15px;
     color: $peach;
+    i {
+      color: $red-color;
+      padding-left: 10px;
+    }
   }
   .homepage-left-text {
     background-color: white;
@@ -303,7 +308,7 @@ header {
   scroll-snap-align: start;
   flex-shrink: 0;
   width: 300px;
-  height: 300px;
+  height: 225px;
   margin-right: 20px;
   margin-bottom: 15px;
   box-shadow: 5px 5px 10px rgb(66, 66, 66);
@@ -319,4 +324,9 @@ header {
       transform: scale(1.5);
     }
   }
+}
+
+.slide-info {
+  color: $black;
+  text-align: center;
 }
